# fava-plugins

./: .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.builds/: archlinux.yml
.github/workflows/: ci.yml
fava_plugins/: settlement_date.py  split_income.py  todo_as_error.py
tests/: conftest.py  test_split_income.py  test_todo_as_error.py
