[metadata]
name = fava-plugins
version = 1.0
author = Jakob Schnitzer
author_email = mail@jakobschnitzer.de
license = MIT
description = A collection of Beancount plugins.
keywords = fava, beancount, accounting
url = https://github.com/beancount/fava-plugins
long_description = file: README.md
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Education
    Intended Audience :: End Users/Desktop
    Intended Audience :: Financial and Insurance Industry
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: JavaScript
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Office/Business :: Financial :: Accounting
    Topic :: Office/Business :: Financial :: Investment

[options]
packages = find:
zip_safe = False
install_requires = beancount>=2.0
include_package_data = True

[options.packages.find]
exclude = tests
